--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -11,31 +11,21 @@
             <article class="media content-section" style="height: 140px; width: 100%">
                 {%  if user_profile != None %}
                     <div class="mt-2 d-flex full-width align-items-center">
-                        <img
-                           class="rounded-circle mr-3 img-fluid"
-                           style="width: 90px; height: 90px;"
-                           src="{{ user_profile.profile.image.url }}">
+                        <img class="rounded-circle mr-3 img-fluid" style="width: 90px; height: 90px;" src="{{ user_profile.profile.image.url }}">
                         <div>
-                            <h4 style="text-align: left"
-                                    class="white-important">
+                            <h4 style="text-align: left" class="white-important">
                                 {{ user_profile.username }}
                             </h4>
-                            <h6 style="text-align: left"
-                                    class="email-profile">
+                            <h6 style="text-align: left" class="email-profile">
                                 {{ user.email }}
                             </h6>
-
                         </div>
                     </div>
                 {%  else %}
                     <div class="mt-2 d-flex full-width align-items-center">
-                        <img
-                           class="rounded-circle mr-3"
-                           style="width: 90px; height: 90px;"
-                           src="{{ user.profile.image.url }}">
+                        <img class="rounded-circle mr-3" style="width: 90px; height: 90px;" src="{{ user.profile.image.url }}">
                         <div>
-                            <h4 style="text-align: left"
-                                    class="white-important">
+                            <h4 style="text-align: left" class="white-important">
                                 {{ user.username }}
                             </h4>
                             <h6 style="text-align: left"
@@ -49,10 +39,10 @@
             <article class="media content-section">
                 <div class="row full-width pl-2">
                     <div class="col-6">
-                            Followers
+                        Followers
                     </div>
                     <div class="col-6">
-                            Following
+                        Following
                     </div>
                     {%  if user_profile != None %}
                         <div class="col-6">
@@ -77,7 +67,6 @@
                                 </h3>
                             </a>
                         </div>
-
                         <a href="{% url 'user-follows' user.username %}">
                             <div class="col-6">
                                 <h3 class="white-important follow-click">
